[package]
name = "uniwhat"
version = "0.2.0"
authors = ["Amanda McCann <amanda@technomancy.org>"]
description = "Display the unicode characters text"
edition = "2018"
license = "AGPL-3.0+"
keywords = ["unicode", "text"]
repository = "https://git.sr.ht/~ebel/uniwhat"

categories = ["command-line-utilities", "text-processing"]

[dependencies]
unic-ucd-name = "0.9.0"
